--- a/resources/settings.json
+++ b/resources/settings.json
@@ -4,7 +4,7 @@
         "DOWN": false,
         "LEFT": false,
         "RIGHT": false,
-        "POWER": false
+        "POWER": 0
     },
 
     "camera": {
